# b-roll-me

./: AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
e2e/: app.spec.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: ffmpeg-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Layout.tsx  NewProjectDialog.tsx  PreviewModal.tsx
src/lib/: database.ts  downloader.ts  evaluator.ts  innertube.ts  llm.ts  models.ts  prompts.ts  streaming.ts  transcript.ts  whisper.ts  youtube.ts
src/lib/__tests__/: downloader.test.ts  evaluator.test.ts  llm.test.ts  models.test.ts  streaming.test.ts  transcript.test.ts  youtube.test.ts
src/pages/: Dashboard.tsx  ProjectView.tsx  Settings.tsx
src/pages/__tests__/: Dashboard.test.tsx  ProjectView.test.tsx  Settings.test.tsx
src/stores/: downloadStore.ts  evaluationStore.ts  momentStore.ts  projectStore.ts  searchStore.ts  settingsStore.ts
src/stores/__tests__/: downloadStore.test.ts  evaluationStore.test.ts  momentStore.test.ts  projectStore.test.ts  searchStore.test.ts  settingsStore.test.ts
src/test/: mocks.ts  setup.ts
src/types/: index.ts
